Fix z-index issue with helper users ddl on summit form

--- a/src/styles/general.less
+++ b/src/styles/general.less
@@ -166,3 +166,8 @@ h3 {
     right: 25px;
   }
 }
+
+.registration_disclaimer_input {
+  position: relative;
+  z-index: 0;
+}
